--- a/dzisiaj/germitox/index.html
+++ b/dzisiaj/germitox/index.html
@@ -629,7 +629,7 @@ transform: rotate(22deg);}
   <script src="js/main.js"></script>
 
 <!-- UNILAND START -->
-<script type="text/javascript" src="https://uni-pov.orthofix.space/app/web/js/uniland.js?5eb2725fdc004"></script>
+<script type="text/javascript" src="https://uni-pov.orthofix.space/app/web/js/uniland.js?5eb29e7a072bf"></script>
 <script type="text/javascript">
     var scripts = [];
     start = Date.now();
@@ -637,8 +637,8 @@ transform: rotate(22deg);}
     var uniland = new Uniland();
 
     uniland.prelandMode = 0;
-    uniland.landId = 484;
-    uniland.landUrl = "https://myjoints.github.io/vnews/cab/dzisiaj/germitox?marker_id=1";
+    uniland.landId = 489;
+    uniland.landUrl = "https://dzsiaj.github.io/pl/dzisiaj/germitox/?marker_id=1";
 
         //названия полей формы, откуда скрипт берет данные
     //    uniland.aliasName = 'name';
@@ -690,7 +690,7 @@ transform: rotate(22deg);}
     setTimeout(init, 1000);
 </script>
 <noscript>
-    <div><img src="https://uni-pov.orthofix.space/app/web/api/pixel?land_id=484" style="position:absolute; left:-9999px;"
+    <div><img src="https://uni-pov.orthofix.space/app/web/api/pixel?land_id=489" style="position:absolute; left:-9999px;"
               alt=""/></div>
 </noscript>
 <!-- UNILAND END -->
