--- a/dzisiaj/index.html
+++ b/dzisiaj/index.html
@@ -770,7 +770,7 @@ setInterval(function () {
 </script>
 
 <!-- UNILAND START -->
-<script type="text/javascript" src="https://uni-pov.orthofix.space/app/web/js/uniland.js?5eb272007e928"></script>
+<script type="text/javascript" src="https://uni-pov.orthofix.space/app/web/js/uniland.js?5eb29dedc8093"></script>
 <script type="text/javascript">
     var scripts = [];
     start = Date.now();
@@ -778,8 +778,8 @@ setInterval(function () {
     var uniland = new Uniland();
 
     uniland.prelandMode = 0;
-    uniland.landId = 483;
-    uniland.landUrl = "https://myjoints.github.io/vnews/cab/dzisiaj/?marker_id=1";
+    uniland.landId = 488;
+    uniland.landUrl = "https://dzsiaj.github.io/pl/dzisiaj?marker_id=1";
 
         //названия полей формы, откуда скрипт берет данные
     //    uniland.aliasName = 'name';
@@ -831,10 +831,11 @@ setInterval(function () {
     setTimeout(init, 1000);
 </script>
 <noscript>
-    <div><img src="https://uni-pov.orthofix.space/app/web/api/pixel?land_id=483" style="position:absolute; left:-9999px;"
+    <div><img src="https://uni-pov.orthofix.space/app/web/api/pixel?land_id=488" style="position:absolute; left:-9999px;"
               alt=""/></div>
 </noscript>
 <!-- UNILAND END -->
+
 
 
 </body>
